fix: Adjust padding for terminal component on small screens

--- a/docs/src/pages/terminal.css
+++ b/docs/src/pages/terminal.css
@@ -95,6 +95,6 @@ span[data-color="green"] {
 @media screen and (max-width: 425px) {
 	#termynal {
 		font-size: 12px;
-		padding: 50px 0px 0px 15px;
+		padding: 50px 5px 5px 15px;
 	}
 }
